# neo

./: .deepsource.toml  .gitignore  CHANGELOG.md  Cargo.toml  Earthfile  NOTES.md  README.md  build.rs  cliff.toml  manifest.xml  release.sh
.github/: renovate.json
.github/workflows/: release.yml
src/: main.rs
src/downloader/: config.rs  dictionary.rs  fetcher.rs  mod.rs  structures.rs
