[package]
name = "neo"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[package.metadata.winres]
FileDescription = "E621 / E926 Image Downloader"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.62"
once_cell = "1.13.1"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.83"
serde_yaml = "0.9.9"

[build-dependencies]
# winres project
winres = "0.1"

[patch.crates-io]
winres = { git = "https://github.com/sandydoo/winres", branch = "bugfix/fix-linking" }
