[package]
name = "neo"
version = "1.3.1"
edition = "2021"
build = "build.rs"

[package.metadata.winres]
FileDescription = "E621 / E926 Image Downloader"

[dependencies]
color-eyre = { version = "0.6", default-features = false }
loading = "*"
once_cell = "1.19.0"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.112"
serde_yaml = "0.9.30"

[build-dependencies]
# winres project
winres = "0.1"

[patch.crates-io]
winres = { git = "https://github.com/sandydoo/winres", branch = "bugfix/fix-linking" }
